--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Les P'tits Habitants</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,25 +17,32 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="Sass/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
+  <main>
+    <div class="habitant">
+      Les P'tits Habitants
+    </div>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+      <nav class="navbar">
+        <ul class="liste">
+          <li class="sous-liste">
+            Animal Crossing
+          </li>
+          <li class="sous-liste">
+            Les sims
+          </li>
+        </ul>
+      </nav>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+        <h1>
+          Bienvenue sur le site officiel du serveur discord "Les P'tits Habitants" !
+        </h1>
+  </main>
 </body>
 
 </html>
