--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <body>
   <main>
     <div class="habitant">
-      Les P'tits Habitants
+      <p class='petit'>
+        Les P'tits Habitants
+      </p>
     </div>
 
       <nav class="navbar">
@@ -39,9 +41,13 @@
         </ul>
       </nav>
 
-        <h1>
+        <h1 class="welcome">
           Bienvenue sur le site officiel du serveur discord "Les P'tits Habitants" !
         </h1>
+
+          <footer>
+            <img class="discord" src="img/discord.png" alt="discord">
+          </footer>
   </main>
 </body>
 
