--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         </h1>
 
           <footer>
-            <img class="discord" src="img/discord.png" alt="discord">
+            <a href="https://disboard.org/fr/server/895103698789863466" target="_blank">
+              <img class="discord" src="img/discord.png" alt="discord">
+            </a>
           </footer>
   </main>
 </body>
