--- a/animalcrossing.html
+++ b/animalcrossing.html
@@ -43,9 +43,30 @@
         </ul>
       </nav>
 
-        <h1 class="welcome">
-          Bienvenue sur le site officiel du serveur discord "Les P'tits Habitants" !
+        <h1 class="start">
+            Les différentes îles
         </h1>
+
+        <section class="grid">
+            <div class="grid-object">
+                <img class="pexel" src="img/pexel.webp" alt="pexel">
+            </div>
+            <div class="grid-object">
+                <img class="pexel" src="img/pexel.webp" alt="pexel">
+            </div>
+            <div class="grid-object">
+                <img class="pexel" src="img/pexel.webp" alt="pexel">
+            </div>
+            <div class="grid-object">
+                <img class="pexel" src="img/pexel.webp" alt="pexel">
+            </div>
+            <div class="grid-object">
+                <img class="pexel" src="img/pexel.webp" alt="pexel">
+            </div>
+            <div class="grid-object">
+                <img class="pexel" src="img/pexel.webp" alt="pexel">
+            </div>
+        </section>
 
           <footer>
             <p class="footer">
