--- a/animalcrossing.html
+++ b/animalcrossing.html
@@ -50,21 +50,39 @@
         <section class="grid">
             <div class="grid-object">
                 <img class="pexel" src="img/pexel.webp" alt="pexel">
+                    <p class="auteur">
+                        Créateur
+                    </p>
             </div>
             <div class="grid-object">
                 <img class="pexel" src="img/pexel.webp" alt="pexel">
+                <p class="auteur">
+                    Créateur
+                </p>
             </div>
             <div class="grid-object">
                 <img class="pexel" src="img/pexel.webp" alt="pexel">
+                <p class="auteur">
+                    Créateur
+                </p>
             </div>
             <div class="grid-object">
                 <img class="pexel" src="img/pexel.webp" alt="pexel">
+                <p class="auteur">
+                    Créateur
+                </p>
             </div>
             <div class="grid-object">
                 <img class="pexel" src="img/pexel.webp" alt="pexel">
+                <p class="auteur">
+                    Créateur
+                </p>
             </div>
             <div class="grid-object">
                 <img class="pexel" src="img/pexel.webp" alt="pexel">
+                <p class="auteur">
+                    Créateur
+                </p>
             </div>
         </section>
 
