--- a/animalcrossing.html
+++ b/animalcrossing.html
@@ -38,7 +38,9 @@
             </a>
           </li>
           <li class="sous-liste">
-            Les sims
+            <a href="sims.html">
+                Les sims
+            </a>
           </li>
         </ul>
       </nav>
